bento/css/base.css
/* ... */
/* == Mockup Styles ======================================================== */
/* This Styles are just for Mockups. They don't have full *-browser support! */

.column_2 {
  -moz-column-count: 2;
  -moz-column-gap: 20px;
  -webkit-column-count: 2;
  -webkit-column-gap: 20px;
  column-count: 2;
  column-gap: 20px;
  
}

.column_3 {
  -moz-column-count: 3;
  -moz-column-gap: 20px;
  -webkit-column-count: 3;
  -webkit-column-gap: 20px;
  column-count: 3;
  column-gap: 20px;
}

.column_4{
  -moz-column-count: 4;
  -moz-column-gap: 20px;
  -webkit-column-count: 4;
  -webkit-column-gap: 20px;
  column-count: 4;
  column-gap: 20px;
}

/* == Debug Styles ======================================================== */

/*div {background: fuchsia;}*/

/* == Menu Styles ========================================================= */

#global-navigation li.selected {
  background-color: #690;
}

.global-navigation-menu {
  background: #fff;
  border: 1px solid #888;
  border-top: none;
  width: 23em;
  padding: 0;
  display: none;
  position: absolute;
  z-index: 10;
}

.global-navigation-menu li {
  display: block;
  clear: both;
  margin: 0;
}

.global-navigation-menu li a {
  height: 56px;
  display: block;
  text-decoration: none;
}

.global-navigation-menu li:hover a {
  color: white;
}

.global-navigation-menu li:hover {
  background: #690;
}

.global-navigation-menu li img {
  float: left;
  width: 48px;
  height: 48px;
  margin: 4px;
  margin-right: 8px;
}

.global-navigation-menu li div {
  font-weight: bold;
  font-size: 90%;
  padding-top: 4px;
}

.global-navigation-menu li:hover div {
}

.global-navigation-menu li div.desc {
  color: #000;
  font-size: 75%;
  font-weight: normal;
  padding-top: 2px;
}

.global-navigation-menu li:hover div.desc {
  color: #fff;
}

